<resources>
    <string name="app_name">FilmHunt</string>
    <string name="splash_title">FilmHunt</string>
    <string name="your_ultimate_movie_search_engine">Your Ultimate Movie Search Engine.</string>
    <string name="find_a_film">Find A Film</string>
    <string name="background_image">Background Image</string>
    <string name="logo">Logo</string>
    <string name="regis_university_msse667_web_mobile_frameworks">Regis University, MSSE667 - Web Mobile Frameworks</string>
    <string name="dashboard_screen">Dashboard Screen</string>

    <string name='login'>Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="registerHere">Click to register</string>
    <string name="loginNow">Already have an account? Sign in here.</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">New User? Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_for_your_desired_movies">Search For Your Desired Movies</string>
    <string name="movie_image_desc">movie_image_desc</string>


</resources>